--- a/web/saito/css-imports/themes/saito-dark.theme.css
+++ b/web/saito/css-imports/themes/saito-dark.theme.css
@@ -137,9 +137,6 @@ html[data-theme="dark"] {
   --background-color-button-sidebar-chat-active: var(--color-tint-dark);
   --background-color-button-hover-modal-oldschool: var(--color-primary);
   --background-color-button-chat-popup-send: var(--background-color-main);
-  /* Not used yet, seems to not work*/
-  /* Progress Bar */
-  --background-color-progress-bar: var(--color-primary);
   /* Sidebar, Headers and Notification Colors */
   --background-color-button-hover-sidebar: var(--color-primary);
   /* Special UI Components */
